DuPont DevSB/src/objects/pse__Schedule_Exception__c.object
<CustomObject>
    <customHelpPage>pse__ScheduleExceptionHelp</customHelpPage>
    <description>Specifies an exception from the standard daily hours worked by a resource on an assignment. Schedule exceptions can be created per day or for any duration that lies within an existing schedule. Created automatically when you select a scheduling strategy for an assignment, edit an existing scheduling strategy using the assignment Edit Schedule button, or edit a schedule in the Resource or Project Planners. If configured, a resource can edit schedules on the Timecard Entry page, in the Schedules section.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <inlineHelpText>Enter the start date of the exception date range</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>The end date of the exception date range</description>
        <inlineHelpText>The end date of the exception date range</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Exception_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter the default number of hours to use if no value is given for an individual day. For example, if this value is 2 and no value for Monday Hours is supplied, the number of hours for Monday will be treated as 2.</description>
        <inlineHelpText>Enter the default number of hours to use if no value is given for an individual day. For example, if this value is 2 and no value for Monday Hours is supplied, the number of hours for Monday will be treated as 2.</inlineHelpText>
        <label>Default Exception Hours Per Day</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Hours__c</fullName>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Hours__c</fullName>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Schedule Exceptions</relationshipLabel>
        <relationshipName>Schedule_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Hours__c</fullName>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Hours__c</fullName>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Hours__c</fullName>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Hours__c</fullName>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Schedule Exception</label>
    <nameField>
        <displayFormat>SchedException{000000000}</displayFormat>
        <label>Schedule Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Check_Date_Range</fullName>
        <active>true</active>
        <errorConditionFormula>OR( pse__Date__c &gt;  pse__Schedule__r.pse__End_Date__c, pse__Date__c &lt; pse__Schedule__r.pse__Start_Date__c, pse__End_Date__c &gt; pse__Schedule__r.pse__End_Date__c, pse__End_Date__c &lt; pse__Schedule__r.pse__Start_Date__c )</errorConditionFormula>
        <errorMessage>Start and/or End Date does not fall within the start and end dates of the schedule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__check_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__End_Date__c &lt; pse__Date__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date</errorMessage>
    </validationRules>
</CustomObject>